--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@react-oauth/google": "^0.12.2",
-    "@react-spring/web": "^10.0.3",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/dom": "^10.4.1",
@@ -17,6 +16,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@testing-library/user-event": "^14.6.1",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
     "@vitejs/plugin-react": "^4.3.4",
